--- a/css/admin_panel.css
+++ b/css/admin_panel.css
@@ -6,9 +6,23 @@
 .log_out{
     display: block;
     float: right;
-    transform: translateY(-140%);
+    transform: translateY(-100%);
+    border: 1px solid #dee2e6;
+    border-bottom: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     background-color: rgba(0, 0, 0, 0);
     color: #0d6efd;
 }
+
+.main{
+    border: 1px solid #dee2e6;
+    border-top: 0;
+}
+
+a.nav-link:nth-child(2){
+    padding: 0;
+}
+
 
 /*border-bottom: 1px solid #dee2e6;*/
