--- a/css/admin_panel.css
+++ b/css/admin_panel.css
@@ -24,5 +24,8 @@ a.nav-link:nth-child(2){
     padding: 0;
 }
 
-
-/*border-bottom: 1px solid #dee2e6;*/
+form > h4{
+    border-top: 1px solid #dee2e6;
+    padding-top: 10px;
+    margin-top: 10px;
+}
