--- a/css/main.css
+++ b/css/main.css
@@ -58,8 +58,17 @@ p{
 .footer_links{
     background-color: rgb(212, 212, 212);
     padding: 20px;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
+}
+
+.footer_link_image{
+    height: 20px;
+}
+
+.footer_link_text{
+    text-decoration: none;
+    font-size: 20px;
 }
 
 @media only screen and (max-width: 600px) {
