Contains a lot of fixes. Also added throwing 404 for blank posts and direct url access  etc.

--- a/css/old_grey_post.css
+++ b/css/old_grey_post.css
@@ -20,3 +20,12 @@
     border-color: #acacac;
     color: grey;
 }
+
+#title::before{
+    content:"TITLE: ";
+}
+
+#title{
+    font-weight: bolder;
+    font-size: 2.5rem;
+}
